test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:1: In function 'main':
redefineTypeNames3.chpl:6: error: unresolved call 'bool(128)'
